--- a/flights.html
+++ b/flights.html
@@ -119,7 +119,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link text-white" href="/index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="#">Flights</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
         </ul>
